# rust-workout-log

./: Cargo.toml  README.md  _workout.sh  data.json  data2.json  replsave.json  workout_data.json
src/: main.rs  types.rs
