[package]
name = "workout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.1.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sscanf = "0.4.0"
dirs = "*"
